change places pages and some other fixes

--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -12,6 +12,7 @@ include ../blocks/header-user/header-user
 include ../blocks/icon/icon
 include ../blocks/link/link
 include ../blocks/lists/lists
+include ../blocks/logo/logo
 include ../blocks/map/map
 include ../blocks/popups/popups
 include ../blocks/put-block-into-slot/put-block-into-slot
