--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,21 +13,23 @@
 
 .container {
   width: 100%;
-  max-width: 1639px;
+  max-width: $container-width;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 $container-padding;
   box-sizing: border-box;
+
   &_flex {
     display: flex;
     align-items: center;
   }
+
   &_banner {
     display: flex;
     align-items: stretch;
   }
 
   &_content {
-    width: 1085px;
+    width: 1144px;
     display: flex;
     align-items: flex-start;
   }
