--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -3,20 +3,18 @@
 // ##########
 // Базовые настройки сетки сайта
 // ##########
-$container-width: 960px; // Максимальная ширина контейнера контента
-$container-padding: 20px; // Отступы слева и справа у контейнера
+$container-width: 1700px; // Максимальная ширина контейнера контента
+$container-padding: 40px; // Отступы слева и справа у контейнера
 $grid-container-width: 100%; // Ширина контейнера сетки
 $grid-cols: 12; // Количество колонок в сетке
-$grid-gap: 20px; // Расстояние между колонками
-$grid-gap-vertical: 20px; // Расстояние между строками в сетке
+$grid-gap: 50px; // Расстояние между колонками
+$grid-gap-vertical: 50px; // Расстояние между строками в сетке
 $grid-col-width: $grid-container-width/$grid-cols; // Ширина одной колонки
-$breakpoints: (
-  'xl': 1920px,
-  'lg': 1280px,
-  'md': 1024px,
-  'sm': 768px,
-  'xs': 480px
-);
+$breakpoints: ('xl': 1600px,
+'lg': 1280px,
+'md': 1024px,
+'sm': 768px,
+'xs': 480px);
 
 // ##########
 // Цвета
@@ -36,7 +34,8 @@ $color-text-green:#2ee0c9;
 $color-gradient-one:#0caecc;
 $color-gradient-two:#30e3c9;
 $color-yellow: #ff9600;
-$color-red: #eb4433;;
+$color-red: #eb4433;
+;
 $color-blue: #1dd5f0;
 $color-green: #29f785;
 $color-wite: #ffffff;
@@ -54,5 +53,6 @@ $ease-main: .3s ease;
 // ##########
 // Шрифты
 // ##########
-$font-main: 'ProximaNova', sans-serif; // Основной шрифт сайта
-$font-second: Times New Roman, sans-serif; // Дополнительный шрифт
+$font-main: 'ProximaNova',
+'Arial',
+sans-serif; // Основной шрифт сайта
