--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -1,7 +1,7 @@
 extends ../../layouts/default
 
 block head
-  - var pageTitle = 'Space pool'
+  - var pageTitle = 'SpacePool - Ui-kit'
 
 block content
   +ui-kit
@@ -116,7 +116,7 @@ block content
             h6 Заголовок H6 (heading-6)
             p Текст p (text)<br> Цитата внутри текста p: <q>Цитата q</q>
             p <small>Тег small внутри p (text-small)</small>
-    
+
     +ui-section
       +ui-section-head
         h2 header
@@ -137,7 +137,7 @@ block content
           +col(3)
           +col(3)
             +scroll-form
-            
+
     +ui-section
     +ui-section-content()
         +grid
@@ -160,8 +160,8 @@ block content
         +ui-elements-list()
           +button()(href="#").js-freeze .js-freeze
           +button()(href="#").js-unfreeze .js-unfreeze
-        
-          
+
+
 
     //- //- Списки
     //- +ui-section
