--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -133,7 +133,7 @@
     font-weight: 700;
     text-transform: uppercase;
     font-size: 20px;
-    
+
   }
   &__text {
     flex: 1;
@@ -142,7 +142,7 @@
     font-size: 14px;
     font-weight: 700;
     text-transform: uppercase;
-    color: $text-light;
+    color: $color-text-light;
   }
   border: 1px solid $color-border !important;
 }
@@ -169,10 +169,10 @@
 
   &[data-type*='select-one'] {
 
-    .choices__inner { padding-bottom: 0; 
+    .choices__inner { padding-bottom: 0;
       background-color: rgba(0, 0, 0, 0);
     }
-    
+
     &::after {
       content: '';
       top: 0;
@@ -197,14 +197,14 @@
 
   &__list {
     border-color: $color-border;
-    
+
     &--single {
       display: table;
       box-sizing: border-box;
       height: 100%;
       padding: 0;
       padding-right: 20px;
-      
+
 
       .choices__item {
         display: table-cell;
@@ -214,13 +214,13 @@
 
     &--dropdown {
       box-sizing: border-box;
-      
+
       .choices__item {
         padding: 10px;
-        
+
         &--selectable {
           transition: opacity $ease-main;
-          
+
           &.is-highlighted {
             opacity: .5;
             background-color: white;
