--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -37,14 +37,14 @@
     }
 
     &__text {
-      color: $text-light;
+      color: $color-text-light;
       text-align: center;
       font-size: 13px;
       letter-spacing: -0.26px;
       margin: 0 0 22px;
 
       &-min {
-        color: $text-light;
+        color: $color-text-light;
         text-align: center;
         font-size: 12px;
         letter-spacing: -.3px;
@@ -80,7 +80,7 @@
     letter-spacing: -0.28px;
     font-weight: 700;
     text-transform: uppercase;
-    color: $text-light;
+    color: $color-text-light;
     font-size: 14px;
     margin-bottom: 5px;
     display: flex;
