--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -1,3 +1,161 @@
 .section {
+  $b: &;
+
   display: block;
+  width: 100%;
+  margin-bottom: 100px;
+
+  &_bg {
+    color: $color-white;
+  }
+
+  &__wrapper {
+    position: relative;
+    width: 100%;
+  }
+
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    &-image {
+      @include fill-img;
+
+      font-size: 0;
+    }
+  }
+
+  &__header {
+    margin-bottom: 60px;
+
+    #{$b}_bg & {
+      margin-bottom: auto;
+    }
+
+    #{$b}_lead & {
+      display: flex;
+
+      @include screen('lg') {
+        flex-wrap: wrap;
+      }
+    }
+  }
+
+  &__title {
+    @include heading-3;
+
+    font-weight: 700;
+
+    @include screen('sm') {
+      @include heading-4;
+    }
+
+    &_big {
+      @include heading-1;
+
+      font-weight: 700;
+
+      @include screen('lg') {
+        @include heading-1-lg;
+      }
+
+      @include screen('sm') {
+        @include heading-1-sm;
+      }
+    }
+
+    #{$b}_promo & {
+      max-width: 670px;
+
+      @include screen('lg') {
+        max-width: none;
+      }
+
+      &:not(:last-child) {
+        margin-bottom: 37px;
+      }
+    }
+  }
+
+  &__content {
+    position: relative;
+    display: block;
+    width: 100%;
+    z-index: 2;
+    box-sizing: border-box;
+
+    #{$b}_bg & {
+      padding: 105px 136px 30px;
+
+      @include screen('xl') {
+        padding: 113px 60px 30px;
+      }
+
+      @include screen('lg') {
+        padding: 74px 56px 46px;
+      }
+
+      @include screen('sm') {
+        padding: 40px 20px 46px;
+      }
+    }
+
+    #{$b}_lead & {
+      padding: 124px 136px 30px;
+
+      @include screen('xl') {
+        padding: 113px 60px 30px;
+      }
+
+      @include screen('lg') {
+        padding: 74px 56px 46px;
+      }
+
+      @include screen('sm') {
+        padding: 40px 20px 46px;
+      }
+    }
+  }
+
+  &__lead {
+    display: block;
+
+    &_left {
+      width: 41.4%;
+
+      @include screen('xl') {
+        width: 40.3%;
+      }
+
+      @include screen('lg') {
+        width: 100%;
+      }
+    }
+
+    &_right {
+      width: 58.6%;
+
+      @include screen('xl') {
+        width: 59.7%;
+      }
+
+      @include screen('lg') {
+        width: 100%;
+      }
+    }
+  }
+
+  &__note {
+    @include text16;
+
+    font-weight: 300;
+
+    @include screen('sm') {
+      @include text;
+    }
+  }
 }
