--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -1,8 +1,11 @@
 include ../blocks/accordion/accordion
+include ../blocks/avatar/avatar
 include ../blocks/breadcrumbs/breadcrumbs
 include ../blocks/burger/burger
 include ../blocks/button/button
+include ../blocks/close/close
 include ../blocks/content-zone/content-zone
+include ../blocks/divider/divider
 include ../blocks/dropdown/dropdown
 include ../blocks/facil-list/facil-list
 include ../blocks/form-elements/form-elements
@@ -14,16 +17,22 @@ include ../blocks/link/link
 include ../blocks/lists/lists
 include ../blocks/logo/logo
 include ../blocks/map/map
+include ../blocks/nav-list/nav-list
+include ../blocks/overlay/overlay
 include ../blocks/page/page
 include ../blocks/popups/popups
 include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
 include ../blocks/scroll-form/scroll-form
 include ../blocks/section/section
+include ../blocks/short-profile/short-profile
 include ../blocks/slider/slider
+include ../blocks/social/social
+include ../blocks/socials/socials
 include ../blocks/table/table
 include ../blocks/tabs/tabs
 include ../blocks/text-list/text-list
+include ../blocks/user-link/user-link
 include ../components/banner/banner
 include ../components/breadcrumbs-box/breadcrumbs-box
 include ../components/content-left/content-left
@@ -31,4 +40,5 @@ include ../components/content/content
 include ../components/footer/footer
 include ../components/header/header
 include ../components/info/info
+include ../components/main-menu/main-menu
 include ../components/ui-kit/ui-kit
