--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,6 +17,7 @@
   margin: 0 auto;
   padding: 0 $container-padding;
   box-sizing: border-box;
+  overflow: hidden;
 
   @include screen('sm') {
     padding: 0 $container-padding-mobile;
