--- a/app/styles/helpers/_text-styles.scss
+++ b/app/styles/helpers/_text-styles.scss
@@ -2,55 +2,88 @@
 
 @mixin heading-1 {
   font-size: 56px;
-  letter-spacing: -1.12px;
-  line-height: 57px;
+  line-height: (57/56);
+  letter-spacing: -.02em;
+}
+
+@mixin heading-1-lg {
+  font-size: 50px;
+  line-height: (48/50);
+  letter-spacing: -.02em;
+}
+
+@mixin heading-1-sm {
+  font-size: 30px;
+  line-height: (28/30);
+  letter-spacing: -.02em;
 }
 
 @mixin heading-2 {
   font-size: 40px;
-  line-height: 1.4;
+  line-height: 1.2;
+  letter-spacing: -.02em;
 }
 
 @mixin heading-3 {
-  font-size: 30px;
-  line-height: 1.45;
+  font-size: 25px;
+  line-height: (33/25);
+  letter-spacing: -.02em;
 }
 
 @mixin heading-4 {
   font-size: 20px;
-  line-height: 1.5;
+  line-height: (26/20);
+  letter-spacing: -.02em;
 }
 
 @mixin heading-5 {
   font-size: 18px;
-  line-height: 1.5;
+  line-height: 1.2;
+  letter-spacing: -.02em;
 }
 
 @mixin heading-6 {
-  font-size: 16px;
-  line-height: 1.6;
+  font-size: 15px;
+  line-height: 1.2;
+  letter-spacing: -.02em;
 }
 
 @mixin text-big {
   font-size: 18px;
   line-height: (26/18);
+  letter-spacing: -.02em;
 }
 
 @mixin text-mid {
   font-size: 17px;
   line-height: (26/17);
+  letter-spacing: -.02em;
+}
+
+@mixin text16 {
+  font-size: 16px;
+  line-height: (26/16);
+  letter-spacing: -.02em;
+}
+
+@mixin text15 {
+  font-size: 15px;
+  line-height: (26/15);
+  letter-spacing: -.02em;
 }
 
 @mixin text {
   font-size: 14px;
-  line-height: 1.65;
+  line-height: (20/16);
+  letter-spacing: -.02em;
 }
 
 @mixin text-small {
   font-size: 11px;
   line-height: 1.65;
+  letter-spacing: -.02em;
 }
 
 @mixin ls {
-  letter-spacing: -0.02em;
+  letter-spacing: -.02em;
 }
