--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -1,8 +1,8 @@
 .accordion {
   $b: &;
   @include text;
-  
-  .accordions & { 
+
+  .accordions & {
     margin-top: -1px;
     margin-bottom: 23px;
   }
@@ -19,12 +19,12 @@
   &__heart {
     height: 20px;
     width: 20px;
-    fill: $text-light;
+    fill: $color-text-light;
     margin-left: auto;
   }
 
   &__hot-desc {
-    color: $text-light;
+    color: $color-text-light;
     font-size: 15px;
     text-transform: uppercase;
     letter-spacing: -0.3px;
@@ -129,4 +129,3 @@
     content: '-';
   }
 }
-
