--- a/app/blocks/burger/burger.scss
+++ b/app/blocks/burger/burger.scss
@@ -66,27 +66,15 @@
     display: block;
     height: 4px;
     width: 23px;
+    background-color: $color-basic;
+    transition: background $ease-main;
 
     @include screen('sm') {
       height: 3px;
       width: 16px;
     }
 
-    &::before,
-    &::after {
-      @include pseudo;
-
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      background-color: $color-basic;
-      transition: all $ease-main;
-      transform-origin: center;
-    }
-
-    #{$b}:hover &::before,
-    #{$b}:hover &::after {
+    #{$b}:hover & {
       background-color: $color-basic-dark;
     }
   }
