--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -5,12 +5,10 @@
   height: 270px;
   position: relative;
   z-index: 1;
-}
-.map-two {
-  display: block;
-  position: relative;
-  height: 270px;
-  z-index: 1;
+
+  &_big {
+    height: 470px;
+  }
 }
 
 .leaflet-control-layers-toggle {
@@ -22,14 +20,18 @@
 .leaflet-retina .leaflet-control-layers-toggle {
   background-image: url('../images/map/layers-2x.png');
   background-size: 26px 26px;
-
 }
 
 .leaflet-default-icon-path {
   background-image: url('../images/map/marker-icon.png');
+
+  .map_big & {
+    background-image: url('../images/map/marker-two.png');
+  }
 }
 
-.leaflet-touch .leaflet-bar, .leaflet-touch .leaflet-control-layers {
+.leaflet-touch .leaflet-bar,
+.leaflet-touch .leaflet-control-layers {
   border: none;
   box-shadow: 0 2px 4px rgba($color-basic, .2);
   display: none;
@@ -61,21 +63,15 @@
   @include text;
 }
 
-.leaflet-container .leaflet-control-attribution { display: none; }
+.leaflet-container .leaflet-control-attribution {
+  display: none;
+}
 
 .leaflet-shadow-pane {
- display: none;
+  display: none;
 }
 
 .leaflet-interactive {
   width: 44px !important;
   height: 50px !important;
 }
-
-#mapTwo {
-  height: 470px;
-  .leaflet-default-icon-path {
-    background-image: url('../images/map/marker-two.png') !important;
-  }
-}
-    
