--- a/app/blocks/scrollbar/scrollbar.scss
+++ b/app/blocks/scrollbar/scrollbar.scss
@@ -1,145 +1,167 @@
-// Базовые стили (не трогать)
+@import '../../node_modules/overlayscrollbars/css/OverlayScrollbars.css';
 
-.scroll-wrapper {
-  overflow: hidden !important;
-  padding: 0 !important;
-  position: relative;
+//your theme name
+$theme-name: os-theme-custom;
+
+//horizontal scrollbar
+$scrollbar-horizontal-size: 2px; //horizontal scrollbar height
+$scrollbar-horizontal-padding: 3px;
+$scrollbar-horizontal-inner-expansion: 3px;
+$scrollbar-horizontal-track-background: $color-bg;
+$scrollbar-horizontal-track-background-hover: $color-bg;
+$scrollbar-horizontal-track-background-active: $color-bg;
+$scrollbar-horizontal-track-transition: background-color .3s;
+$scrollbar-horizontal-handle-min-size: 25px; //horizontal scrollbar handle min width
+$scrollbar-horizontal-handle-max-size: none; //horizontal scrollbar handle max width
+$scrollbar-horizontal-handle-background: rgba($color-text-light, 1);
+$scrollbar-horizontal-handle-background-hover: rgba($color-text-light, .6);
+$scrollbar-horizontal-handle-background-active: rgba($color-text-light, 1);
+$scrollbar-horizontal-handle-transition: background-color .3s;
+
+//vertical scrollbar
+$scrollbar-vertical-size: 2px; //vertical scrollbar width
+$scrollbar-vertical-padding: 3px;
+$scrollbar-vertical-inner-expansion: 3px;
+$scrollbar-vertical-track-background: $color-bg;
+$scrollbar-vertical-track-background-hover: $color-bg;
+$scrollbar-vertical-track-background-active: $color-bg;
+$scrollbar-vertical-track-transition: background-color .3s;
+$scrollbar-vertical-handle-min-size: 25px; //vertical scrollbar handle min height
+$scrollbar-vertical-handle-max-size: none; //vertical scrollbar handle max height
+$scrollbar-vertical-handle-background: rgba($color-text-light, 1);
+$scrollbar-vertical-handle-background-hover: rgba($color-text-light, .6);
+$scrollbar-vertical-handle-background-active: rgba($color-text-light, 1);
+$scrollbar-vertical-handle-transition: background-color .3s;
+
+//scrollbar corner
+$scrollbar-corner-background-color: transparent;
+
+.#{$theme-name}>.os-scrollbar-horizontal {
+  right: $scrollbar-vertical-size + ($scrollbar-vertical-padding * 2);
+  height: $scrollbar-horizontal-size;
+  padding: $scrollbar-horizontal-padding;
+  background: $color-bg;
 }
 
-.scroll-wrapper > .scroll-content {
-  border: none !important;
-  box-sizing: content-box !important;
-  height: auto;
-  left: 0;
-  margin: 0;
-  max-height: none;
-  max-width: none !important;
-  overflow: scroll !important;
-  padding: 0;
-  position: relative !important;
-  top: 0;
-  width: auto !important;
+.#{$theme-name}>.os-scrollbar-vertical {
+  bottom: $scrollbar-horizontal-size + ($scrollbar-horizontal-padding * 2);
+  width: $scrollbar-vertical-size;
+  padding: $scrollbar-vertical-padding;
+  background: $color-bg;
 }
 
-.scroll-wrapper > .scroll-content::-webkit-scrollbar {
-  height: 0;
-  width: 0;
+.#{$theme-name}.os-host-rtl>.os-scrollbar-horizontal {
+  left: $scrollbar-vertical-size + ($scrollbar-vertical-padding * 2);
+  right: 0;
 }
 
-.scroll-wrapper.scroll--rtl {
-  direction: rtl;
+.#{$theme-name}>.os-scrollbar-corner {
+  height: $scrollbar-horizontal-size + ($scrollbar-horizontal-padding * 2);
+  width: $scrollbar-vertical-size + ($scrollbar-vertical-padding * 2);
+  background-color: $scrollbar-corner-background-color;
 }
 
-.scroll-element {
-  box-sizing: content-box;
-  display: none;
+.#{$theme-name}>.os-scrollbar-horizontal>.os-scrollbar-track {
+  background: $scrollbar-horizontal-track-background;
 }
 
-.scroll-element div {
-  box-sizing: content-box;
+.#{$theme-name}>.os-scrollbar-vertical>.os-scrollbar-track {
+  background: $scrollbar-vertical-track-background;
 }
 
-.scroll-element .scroll-bar, .scroll-element .scroll-arrow {
-  cursor: default;
+.#{$theme-name}>.os-scrollbar-horizontal>.os-scrollbar-track:hover {
+  background: $scrollbar-horizontal-track-background-hover;
 }
 
-.scroll-element.scroll-x.scroll-scrollx_visible, .scroll-element.scroll-y.scroll-scrolly_visible {
-  display: block;
+.#{$theme-name}>.os-scrollbar-vertical>.os-scrollbar-track:hover {
+  background: $scrollbar-vertical-track-background-hover;
 }
 
-.scroll-textarea {
-  border: 1px solid #ccc;
-  border-top-color: #999;
+.#{$theme-name}>.os-scrollbar-horizontal>.os-scrollbar-track.active {
+  background: $scrollbar-horizontal-track-background-active;
 }
 
-.scroll-textarea > .scroll-content {
-  overflow: hidden !important;
+.#{$theme-name}>.os-scrollbar-vertical>.os-scrollbar-track.active {
+  background: $scrollbar-vertical-track-background-active;
 }
 
-.scroll-textarea > .scroll-content > textarea {
-  border: none !important;
-  box-sizing: border-box;
-  height: 100% !important;
-  margin: 0;
-  max-height: none !important;
-  max-width: none !important;
-  overflow: scroll !important;
-  outline: none;
-  padding: 2px;
-  position: relative !important;
-  top: 0;
-  width: 100% !important;
+.#{$theme-name}.os-host-transition>.os-scrollbar-horizontal>.os-scrollbar-track {
+  transition: $scrollbar-horizontal-track-transition;
 }
 
-.scroll-textarea > .scroll-content > textarea::-webkit-scrollbar {
-  height: 0;
-  width: 0;
+.#{$theme-name}.os-host-transition>.os-scrollbar-vertical>.os-scrollbar-track {
+  transition: $scrollbar-vertical-track-transition;
 }
 
-// Кастомные стили
-
-.scroll-element, .scroll-element div {
-  border: none;
-  margin: 0;
-  padding: 0;
+.#{$theme-name}>.os-scrollbar-horizontal>.os-scrollbar-track>.os-scrollbar-handle::before,
+.#{$theme-name}>.os-scrollbar-vertical>.os-scrollbar-track>.os-scrollbar-handle::before {
+  content: '';
   position: absolute;
-  z-index: 10;
-}
-
-.scroll-element div {
-  display: block;
-  height: 100%;
   left: 0;
+  right: 0;
   top: 0;
-  width: 100%;
+  bottom: 0;
+  display: block;
 }
 
-.scroll-element.scroll-x {
-  right: 10px;
-  left: 10px;
-  bottom: 10px;
-  height: 4px;
+.#{$theme-name}>.os-scrollbar-horizontal>.os-scrollbar-track>.os-scrollbar-handle::before {
+  top: -$scrollbar-horizontal-inner-expansion;
+  bottom: -$scrollbar-horizontal-padding;
 }
 
-.scroll-element.scroll-y {
-  right: 10px;
-  top: 10px;
-  bottom: 10px;
-  width: 4px;
+.#{$theme-name}>.os-scrollbar-vertical>.os-scrollbar-track>.os-scrollbar-handle::before {
+  left: -$scrollbar-vertical-inner-expansion;
+  right: -$scrollbar-vertical-padding;
 }
 
-.scroll-element .scroll-element_outer {
-  overflow: hidden;
+.#{$theme-name}.os-host-rtl>.os-scrollbar-vertical>.os-scrollbar-track>.os-scrollbar-handle::before {
+  right: -$scrollbar-vertical-inner-expansion;
+  left: -$scrollbar-vertical-padding;
 }
 
-.scroll-element .scroll-element_outer, .scroll-element .scroll-element_track, .scroll-element .scroll-bar {
-  border-radius: 0;
+.#{$theme-name}>.os-scrollbar-horizontal>.os-scrollbar-track>.os-scrollbar-handle {
+  border-radius: $scrollbar-horizontal-size;
 }
 
-.scroll-element .scroll-element_track {
-  background-color: rgba($color-basic, .05);
+.#{$theme-name}>.os-scrollbar-vertical>.os-scrollbar-track>.os-scrollbar-handle {
+  border-radius: $scrollbar-vertical-size;
 }
 
-.scroll-element .scroll-bar {
-  background-color: $color-border;
-  transition: background-color $ease-main;
+.#{$theme-name}>.os-scrollbar-horizontal>.os-scrollbar-track>.os-scrollbar-handle {
+  min-width: $scrollbar-horizontal-handle-min-size;
+  max-width: $scrollbar-horizontal-handle-max-size;
+  background: $scrollbar-horizontal-handle-background;
 }
 
-.scroll-element:hover .scroll-bar {
-  background-color: $color-main;
-  cursor: pointer;
+.#{$theme-name}>.os-scrollbar-vertical>.os-scrollbar-track>.os-scrollbar-handle {
+  min-height: $scrollbar-vertical-handle-min-size;
+  max-height: $scrollbar-vertical-handle-max-size;
+  background: $scrollbar-vertical-handle-background;
 }
 
-.scroll-element.scroll-draggable .scroll-bar {
-  background-color: #919191;
+.#{$theme-name}>.os-scrollbar-horizontal>.os-scrollbar-track>.os-scrollbar-handle:hover {
+  background: $scrollbar-horizontal-handle-background-hover;
 }
 
-// Стили для случая, когда видны оба скроллбара
-
-.scroll-element.scroll-x.scroll-scrolly_visible {
-  right: 20px;
+.#{$theme-name}>.os-scrollbar-vertical>.os-scrollbar-track>.os-scrollbar-handle:hover {
+  background: $scrollbar-vertical-handle-background-hover;
 }
 
-.scroll-element.scroll-y.scroll-scrollx_visible {
-  bottom: 20px;
+.#{$theme-name}>.os-scrollbar-horizontal>.os-scrollbar-track>.os-scrollbar-handle.active {
+  background: $scrollbar-horizontal-handle-background-active;
 }
+
+.#{$theme-name}>.os-scrollbar-vertical>.os-scrollbar-track>.os-scrollbar-handle.active {
+  background: $scrollbar-vertical-handle-background-active;
+}
+
+.#{$theme-name}.os-host-transition>.os-scrollbar-horizontal>.os-scrollbar-track>.os-scrollbar-handle {
+  transition: $scrollbar-horizontal-handle-transition;
+}
+
+.#{$theme-name}.os-host-transition>.os-scrollbar-vertical>.os-scrollbar-track>.os-scrollbar-handle {
+  transition: $scrollbar-vertical-handle-transition;
+}
+
+@import 'scrollbar-dark.scss';
+@import 'scrollbar-light.scss';
