--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -4,7 +4,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
+  width: 100%;
+  max-width: 100vw;
   z-index: 10;
   transition: all $ease-main;
   background-color: $color-bg;
