--- a/app/components/ui-kit/ui-kit.scss
+++ b/app/components/ui-kit/ui-kit.scss
@@ -14,13 +14,14 @@ $ui-kit-color-darkbg: #111;
     box-shadow: 0 0 30px rgba($color-basic, .15);
     z-index: 10;
     padding: 20px;
-    background-color:$color-grey-dark;
+    background-color: $color-grey-dark;
     transform: translate3d(15%, 0, 0);
     width: 240px;
     opacity: .5;
     transition: opacity $ease-main, transform $ease-main;
     overflow: auto;
     box-sizing: border-box;
+
     &-burger {
       position: absolute;
       width: 18px;
@@ -50,23 +51,29 @@ $ui-kit-color-darkbg: #111;
       transform: translate3d(100%, 0, 0);
       opacity: 1;
 
-      .ui-kit__navigation-burger { opacity: 0; }
+      .ui-kit__navigation-burger {
+        opacity: 0;
+      }
     }
 
     li {
       @include text;
 
-      a { @include link;
-          color: $color-white;
-          transition: .3s;
-          font-weight: 700;
-          font-size: 17px;
-          &:hover {
-            color: $color-green;
-          }
+      a {
+        @include link;
+        color: $color-white;
+        transition: .3s;
+        font-weight: 700;
+        font-size: 17px;
+
+        &:hover {
+          color: $color-green;
+        }
       }
 
-      &:not(:last-child) { margin-bottom: 5px; }
+      &:not(:last-child) {
+        margin-bottom: 5px;
+      }
 
 
     }
@@ -87,9 +94,13 @@ $ui-kit-color-darkbg: #111;
     font-size: 13px;
     line-height: 1.4;
 
-    &:not(:first-child) { margin-top: 30px; }
+    &:not(:first-child) {
+      margin-top: 30px;
+    }
 
-    &:not(:last-child) { margin-bottom: 10px; }
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
   }
 
   &__special {
@@ -106,14 +117,16 @@ $ui-kit-color-darkbg: #111;
       height: 100%;
     }
 
-    & + .ui-kit__name { margin-top: 20px; }
+    &+.ui-kit__name {
+      margin-top: 20px;
+    }
   }
 
   &__elements-list {
     margin-top: -$grid-gap;
     font-size: 0;
 
-    > * {
+    >* {
       margin-right: $grid-gap;
       margin-top: $grid-gap;
     }
@@ -136,20 +149,32 @@ $ui-kit-color-darkbg: #111;
       margin-bottom: 30px;
       text-align: left;
 
-      h1, h2, h3, h4, h5, h6 {
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
         font-size: 30px;
         font-weight: 600;
         line-height: 1.4;
 
-        &:not(:first-child) { margin-top: 20px; }
-        &:not(:last-child) { margin-bottom: 20px; }
+        &:not(:first-child) {
+          margin-top: 20px;
+        }
+
+        &:not(:last-child) {
+          margin-bottom: 20px;
+        }
       }
 
       p {
         font-size: 16px;
         line-height: 1.5;
 
-        &:not(:last-child) { margin-bottom: 10px; }
+        &:not(:last-child) {
+          margin-bottom: 10px;
+        }
       }
     }
 
@@ -172,15 +197,20 @@ $ui-kit-color-darkbg: #111;
       display: block !important;
       border: 1px solid $color-border;
 
-      &:not(:first-child) { margin-top: 30px; }
+      &:not(:first-child) {
+        margin-top: 30px;
+      }
     }
   }
 
   &__scrolldemo {
     border: 1px solid $color-border;
     max-height: 400px;
+    background: $color-white;
 
-    &-block { height: 1000px; }
+    &-block {
+      height: 1000px;
+    }
   }
 
   &__color {
@@ -192,16 +222,24 @@ $ui-kit-color-darkbg: #111;
     vertical-align: top;
     box-shadow: inset 0 0 0 1px rgba(black, .1);
 
-    &_bg_dark { color: white; }
+    &_bg_dark {
+      color: white;
+    }
 
     &_gradient {
-      &_main { @include gradient-main; }
+      &_main {
+        @include gradient-main;
+      }
     }
   }
 
   &__custom-text {
-    &_style-1 { @include text; }
+    &_style-1 {
+      @include text;
+    }
 
-    &:not(:last-child) { margin-bottom: 10px; }
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
   }
 }
