--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -4,169 +4,50 @@ block head
   - var pageTitle = 'SpacePool - Main'
 
 block content
-  section.section
-    +info
-
-  section.section.section_slider
-    .container.container_slider
-      h3.page__title  Featured Spaces
-      +slider-two(false, true)
-        +slide-two
-          img(src='./assets/images/sbo.jpg').slide-index
-          .slider-cube
-            .cube
-          p.slider-title__slide TOG - Henry Wood House
-          p.slider-plach W1W, London
-        +slide-two
-          img(src='./assets/images/sbt.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-plach EC2A, London
-        +slide-two
-          img(src='./assets/images/sbth.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-plach EC2A, London
-        +slide-two
-          img(src='./assets/images/sbf.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-plach EC2A, London
-
-  section.section.section_map
+  +section._bg._lead
     .container
-      .title-map
-        h3.title-map__title Locations
-        +select.footer-select.select-slider
-                option(value="London")
-                option(value="London")
-                option(value="London")
-                option(value="London")
-        +select.footer-select.select-slider
-                option(value="Areas")
-                option(value="Areas")
-                option(value="Areas")
-                option(value="Areas")
-        +select.footer-select.select-slider
-                option(value="Tube Stations")
-                option(value="Tube Stations")
-                option(value="Tube Stations")
-                option(value="Tube Stations")
-        +select.footer-select.select-slider
-                option(value="Workplace type")
-                option(value="Workplace type")
-                option(value="Workplace type")
-                option(value="Workplace type")
-        .title-map__title.title-map__title_last &#169; Clear map settings
-      +map()#mapTwo
-
-  section.section.section_slider-two
-    .container.container_slider
-      h3.page__title  Meeting Rooms
-      +slider-three(false, true)
-        +slide-two
-          img(src='./assets/images/sbo.jpg').slide-index
-          p.slider-cube__text 18 seats
-          p.slider-title__slide TOG - Henry Wood House
-          p.slider-plach W1W, London
-        +slide-two
-          img(src='./assets/images/sbt.jpg').slide-index
-          p.slider-cube__text 18 seats
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-plach EC2A, London
-        +slide-two
-          img(src='./assets/images/sbth.jpg').slide-index
-          p.slider-cube__text 18 seats
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-plach EC2A, London
-        +slide-two
-          img(src='./assets/images/sbf.jpg').slide-index
-          p.slider-cube__text 18 seats
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-plach EC2A, London
-
-  section.section.section_slider-two
-    +info-two
-
-  section.section.section_place
-    .container.container_slider
-      h3.page__title  New Places
-      +slider-five(false, true)
-        +slide-two
-          img(src='./assets/images/sbo.jpg').slide-index
-          .slider-cube
-            .cube
-          p.slider-title__slide TOG - Henry Wood House
-          p.slider-plach W1W, London
-        +slide-two
-          img(src='./assets/images/sbt.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-plach EC2A, London
-        +slide-two
-          img(src='./assets/images/sbth.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-plach EC2A, London
-        +slide-two
-          img(src='./assets/images/sbf.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-plach EC2A, London
-
-
-
-  section.section.section_down
-    .container.container_slider
-      +e.__title
-        h3 Articles
-        p.social-text Subscribe to our Social Media channels:
-        ul.social-list
-          li.social-item
-            a(href="#").social-link
-              +icon('facebook').social-svg
-          li.social-item
-            a(href="#").social-link
-              +icon('linkedin').social-svg
-          li.social-item
-            a(href="#").social-link
-              +icon('twitter').social-svg
-          li.social-item
-            a(href="#").social-link
-              +icon('instagram').social-svg
-
-      +slider-for(false, true)
-        +slide-two
-          img(src='./assets/images/sbo.jpg').slide-index
-          p.slider-cube__text September 9
-          p.slider-title__slide The perfect Workplace Do exist. 5 simple steps to make the office of your drem.
-          p.slider-text For many employers, career success is desired. Establishing a profitable company, we’re looking for the best candidates only, whose knowledge and experience can help to achieve career goals.
-        +slide-two
-          img(src='./assets/images/sbt.jpg').slide-index
-          p.slider-cube__text September 9
-          p.slider-title__slide Pet Friendly workspaces. Do not leave your friend home alone!
-          p.slider-text For many employers, career success is desired. Establishing a profitable company, we’re looking for the best candidates only, whose knowledge and experience can help to achieve career goals.
-        +slide-two
-          img(src='./assets/images/sbth.jpg').slide-index
-          p.slider-cube__text September 9
-          p.slider-title__slide Pet Friendly workspaces. Do not leave your friend home alone!
-          p.slider-text For many employers, career success is desired. Establishing a profitable company, we’re looking for the best candidates only, whose knowledge and experience can help to achieve career goals.
-        +slide-two
-          img(src='./assets/images/sbf.jpg').slide-index
-          p.slider-cube__text September 9
-          p.slider-title__slide Blooming Founders (Former Blooms Lon...
-          p.slider-text For many employers, career success is desired. Establishing a profitable company, we’re looking for the best candidates only, whose knowledge and experience can help to achieve career goals.
+      +section-wrapper
+        +section-bg('assets/images/main-lead.jpg')
+        +section-content
+          +section-header
+            +e.lead_left
+              +section-title('h2')._big The place where you can find your dream workspace.
+            +e.lead_right
+          +section-footer
+            +e.note Between 2&nbsp;960&nbsp;offices, 380 conversation rooms and over 15&nbsp;000 free co-working desks
+  +section
+    +section-header
+      .container
+        +section-title('h2') Featured Spaces
+    +section-content
+  +section
+    .container
+      +section-header
+        +section-title('h2') Locations
+      +section-content
+        +map()._big#mapTwo
+  +section
+    +section-header
+      .container
+        +section-title('h2') Meeting Rooms
+    +section-content
+  +section._bg._promo
+    .container
+      +section-wrapper
+        +section-bg('assets/images/section-bg.jpg')
+        +section-content
+          +section-header
+            +section-title('h2')._big Thousands of&nbsp;professionals prefer to&nbsp;search for perfect workplace on&nbsp;Space Pool
+            +button()(href="#") Find out why
+          +section-footer
+            +e.note Today Space Pool is&nbsp;about searching for greatest and most amazing workplaces around London. It&rsquo;s like visiting hundreds of&nbsp;places whithout even leaving your room.
+  +section
+    +section-header
+      .container
+        +section-title('h2') New Places
+    +section-content
+  +section
+    +section-header
+      .container
+        +section-title('h2') Articles
+    +section-content
