--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -44,11 +44,14 @@ $color-bc-light: #acb5c0;
 $color-bc-dark:#303333;
 $color-form-border:#c0c6cf;
 $color-border-light: #dbe1e3;
-$text-light:#a5b0bd;
+$color-text-light:#a5b0bd;
 $line-bc:#c1c5c5;
 $color-black: #000000;
 $color-overlay: #11151a;
 $color-header-logo: #415a65;
+$color-scroll-light: #dbe2eb;
+$color-scroll-dark: #272825;
+$color-shadow: #222a2e;
 // ##########
 // Transitions
 // ##########
