--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -40,7 +40,7 @@ block content
             +section-title('h2')._big Thousands of&nbsp;professionals prefer to&nbsp;search for perfect workplace on&nbsp;Space Pool
             +button()(href="#") Find out why
           +section-footer
-            +e.note Today Space Pool is&nbsp;about searching for greatest and most amazing workplaces around London. It&rsquo;s like visiting hundreds of&nbsp;places whithout even leaving your room.
+            +e.note_mb15 Today Space Pool is&nbsp;about searching for greatest and most amazing workplaces around London. It&rsquo;s like visiting hundreds of&nbsp;places whithout even leaving your room.
   +section
     +section-header
       .container
