--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,6 +19,10 @@
   box-sizing: border-box;
   overflow: hidden;
 
+  @include screen('lg') {
+    padding: 0 $container-padding-tablet;
+  }
+
   @include screen('sm') {
     padding: 0 $container-padding-mobile;
   }
